--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /node_modules
 /build
 
+.history
+
 # Logs
 logs
 *.log
@@ -52,5 +54,8 @@ pids
 *.seed
 *.pid.lock
 
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+.history/src/app/app.controller_20240726143614.ts
