--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
 DATABASE_PORT=5432
 DATABASE_USER=postgres
-DATABASE_PASSWORD="root"
-DATABASE_HOST="localhost"
+DATABASE_PASSWORD=root
+DATABASE_HOST=localhost
 DATABASE_NAME="nestjs-blog"
 DATABASE_SYNC=true
 DATABASE_AUTOLOAD=true
+PROFILE_API_KEY="someValue"
